# shorelark

./: .gitignore  README.md
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  genetic_algorithm.rs  lib.rs  mutation.rs  section.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  network.rs  neuron.rs
